--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.5",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.4.4",
     "lucide-react": "^0.475.0",
     "ogl": "^1.0.11",
